# news-crawler-mcp

./: .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  claude_desktop_config.json  mcp.json  nixpacks.toml  pyproject.toml  requirements.txt  run_crawler.bat  run_scheduler.py  vercel.json
api/: index.py  requirements.txt
backend/: .env.example  main.py  requirements.txt  supabase_schema.sql
backend/app/: __init__.py
backend/app/api/: __init__.py  news_router.py
backend/app/config/: __init__.py  settings.py  supabase.py
backend/app/repository/: __init__.py  news_repository.py
backend/app/scheduler/: __init__.py  news_scheduler.py
backend/app/schema/: __init__.py  news_schema.py
backend/app/service/: __init__.py  news_service.py  template_service.py
config/: settings.yaml
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: newsApi.ts
frontend/src/components/: BlogGenerator.tsx  BlogTemplateModal.tsx  CategoryFilter.tsx  Header.tsx  LoadingSkeleton.tsx  NewsCard.tsx  NewsList.tsx  index.ts
frontend/src/hooks/: useNews.ts
frontend/src/styles/: index.css
frontend/src/types/: news.ts
src/: __init__.py  server.py
src/crawlers/: __init__.py  naver.py
src/formatters/: __init__.py  blog.py
src/models/: __init__.py  article.py
src/utils/: __init__.py  http.py
